--- a/index.html
+++ b/index.html
@@ -1,11 +1,230 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Muxammadin7 sayti</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Muxammadin | Portfolio</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
+<style>
+body{
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  background:linear-gradient(135deg,#020024,#090979,#00d4ff);
+  color:white;
+}
+header{
+  padding:20px 60px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+nav a{
+  color:white;
+  margin-left:20px;
+  text-decoration:none;
+}
+.lang{
+  margin-left:30px;
+}
+.lang button{
+  background:#38bdf8;
+  border:none;
+  margin-left:5px;
+  padding:5px 10px;
+  border-radius:5px;
+  cursor:pointer;
+}
+
+.hero{
+  height:90vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+}
+.hero h2{font-size:45px;margin:0;}
+.hero span{color:#38bdf8;}
+
+section{padding:60px;}
+h3{color:#38bdf8;font-size:32px;}
+
+.skill{
+  margin-top:20px;
+}
+.bar{
+  background:rgba(255,255,255,0.2);
+  border-radius:20px;
+  overflow:hidden;
+}
+.fill{
+  height:12px;
+  background:#38bdf8;
+  border-radius:20px;
+}
+
+.card{
+  background:rgba(255,255,255,0.08);
+  padding:15px;
+  margin-top:15px;
+  border-radius:15px;
+}
+
+footer{text-align:center;padding:20px;opacity:.7;}
+</style>
 </head>
 <body>
-  <h1>Salom! 👋</h1>
-  <p>Bu mening GitHub Pages saytim ishga tushdi.</p>
+
+<header>
+<h1>Muxammadin.</h1>
+
+<nav>
+<a href="#home" data-lang="home">Home</a>
+<a href="#about" data-lang="about">About</a>
+<a href="#skills" data-lang="skills">Skills</a>
+<a href="#projects" data-lang="projects">Projects</a>
+<a href="#contact" data-lang="contact">Contact</a>
+
+<span class="lang">
+<button onclick="setLang('uz')">UZ</button>
+<button onclick="setLang('ru')">RU</button>
+<button onclick="setLang('en')">EN</button>
+</span>
+</nav>
+</header>
+
+<section class="hero" id="home">
+<h2 data-lang="heroTitle">IT Specialist & <span>Cybersecurity Enthusiast</span></h2>
+<p data-lang="heroText">HTML, CSS, JavaScript, Node.js va Kali Linux bilan ishlayman</p>
+</section>
+
+<section id="about">
+<h3 data-lang="aboutTitle">About Me</h3>
+<p data-lang="aboutText">Men Muxammadin — IT va Cybersecurity yo‘nalishida o‘rganuvchi dasturchiman.</p>
+
+<div class="card">
+<b data-lang="uni">University of Business and Science</b><br>
+Information Technology (2024 - hozir)
+</div>
+</section>
+
+<section id="skills">
+<h3 data-lang="skillsTitle">Skills</h3>
+
+<div class="skill">HTML — 75%
+  <div class="bar"><div class="fill" style="width:75%"></div></div>
+</div>
+
+<div class="skill">CSS — 50%
+  <div class="bar"><div class="fill" style="width:50%"></div></div>
+</div>
+
+<div class="skill">JavaScript & Node.js — 45%
+  <div class="bar"><div class="fill" style="width:45%"></div></div>
+</div>
+
+<div class="skill">Kali Linux & Cybersecurity — 50%
+  <div class="bar"><div class="fill" style="width:50%"></div></div>
+</div>
+</section>
+
+<section id="projects">
+<h3 data-lang="projectsTitle">Projects</h3>
+<div class="card" data-lang="proj1">Personal Portfolio Website</div>
+<div class="card" data-lang="proj2">Landing Page Projects</div>
+<div class="card" data-lang="proj3">Cybersecurity Practice Labs</div>
+</section>
+
+<section id="contact">
+<h3 data-lang="contactTitle">Contact</h3>
+<p>GitHub: <a href="https://github.com/muxammadin7" style="color:#38bdf8;">github.com/muxammadin7</a></p>
+</section>
+
+<footer>© 2026 Muxammadin7</footer>
+
+<script>
+const translations = {
+  uz:{
+    home:"Bosh sahifa",
+    about:"Men haqimda",
+    skills:"Ko‘nikmalar",
+    projects:"Loyihalar",
+    contact:"Aloqa",
+
+    heroTitle:"IT Mutaxassis & <span>Cybersecurity Enthusiast</span>",
+    heroText:"HTML, CSS, JavaScript, Node.js va Kali Linux bilan ishlayman",
+
+    aboutTitle:"Men haqimda",
+    aboutText:"Men Muxammadin — IT va Cybersecurity yo‘nalishida o‘rganuvchi dasturchiman.",
+    uni:"University of Business and Science",
+
+    skillsTitle:"Ko‘nikmalar",
+
+    projectsTitle:"Loyihalar",
+    proj1:"Shaxsiy Portfolio Sayt",
+    proj2:"Landing Page Loyihalar",
+    proj3:"Cybersecurity Amaliy Lablar",
+
+    contactTitle:"Aloqa"
+  },
+
+  ru:{
+    home:"Главная",
+    about:"Обо мне",
+    skills:"Навыки",
+    projects:"Проекты",
+    contact:"Контакты",
+
+    heroTitle:"IT специалист & <span>Кибербезопасность</span>",
+    heroText:"Работаю с HTML, CSS, JavaScript, Node.js и Kali Linux",
+
+    aboutTitle:"Обо мне",
+    aboutText:"Я Мухаммадин — разработчик, изучающий IT и кибербезопасность.",
+    uni:"University of Business and Science",
+
+    skillsTitle:"Навыки",
+
+    projectsTitle:"Проекты",
+    proj1:"Персональный сайт портфолио",
+    proj2:"Landing Page проекты",
+    proj3:"Практика по кибербезопасности",
+
+    contactTitle:"Контакты"
+  },
+
+  en:{
+    home:"Home",
+    about:"About",
+    skills:"Skills",
+    projects:"Projects",
+    contact:"Contact",
+
+    heroTitle:"IT Specialist & <span>Cybersecurity Enthusiast</span>",
+    heroText:"Working with HTML, CSS, JavaScript, Node.js and Kali Linux",
+
+    aboutTitle:"About Me",
+    aboutText:"I am Muxammadin — a developer studying IT and Cybersecurity.",
+    uni:"University of Business and Science",
+
+    skillsTitle:"Skills",
+
+    projectsTitle:"Projects",
+    proj1:"Personal Portfolio Website",
+    proj2:"Landing Page Projects",
+    proj3:"Cybersecurity Practice Labs",
+
+    contactTitle:"Contact"
+  }
+};
+
+function setLang(lang){
+  document.querySelectorAll("[data-lang]").forEach(el=>{
+    const key = el.getAttribute("data-lang");
+    el.innerHTML = translations[lang][key];
+  });
+}
+</script>
+
 </body>
 </html>
