--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Muxammadin | Portfolio</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
 <style>
 body{
@@ -50,9 +52,7 @@ nav a{
 section{padding:60px;}
 h3{color:#38bdf8;font-size:32px;}
 
-.skill{
-  margin-top:20px;
-}
+.skill{margin-top:20px;}
 .bar{
   background:rgba(255,255,255,0.2);
   border-radius:20px;
@@ -69,6 +69,13 @@ h3{color:#38bdf8;font-size:32px;}
   padding:15px;
   margin-top:15px;
   border-radius:15px;
+}
+
+.contact-icons a{
+  color:#38bdf8;
+  font-size:22px;
+  margin-right:15px;
+  text-decoration:none;
 }
 
 footer{text-align:center;padding:20px;opacity:.7;}
@@ -101,11 +108,15 @@ footer{text-align:center;padding:20px;opacity:.7;}
 
 <section id="about">
 <h3 data-lang="aboutTitle">About Me</h3>
-<p data-lang="aboutText">Men Muxammadin — IT va Cybersecurity yo‘nalishida o‘rganuvchi dasturchiman.</p>
+
+<p data-lang="aboutText">
+Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi hamda o‘z loyihalarini yurituvchiman.
+</p>
 
 <div class="card">
+📍 Namangan viloyati, To‘raqo‘rg‘on tumani <br><br>
 <b data-lang="uni">University of Business and Science</b><br>
-Information Technology (2024 - hozir)
+Axborot tizimlari va texnologiyalari (2025 - 2026)
 </div>
 </section>
 
@@ -138,7 +149,14 @@ Information Technology (2024 - hozir)
 
 <section id="contact">
 <h3 data-lang="contactTitle">Contact</h3>
-<p>GitHub: <a href="https://github.com/muxammadin7" style="color:#38bdf8;">github.com/muxammadin7</a></p>
+
+<div class="contact-icons">
+  <a href="tel:+998935457307"><i class="fa-solid fa-phone"></i> +998935457307</a><br><br>
+  <a href="https://t.me/Muxammadin1" target="_blank"><i class="fa-brands fa-telegram"></i> @Muxammadin1</a><br><br>
+  <a href="https://instagram.com/muxammadin17" target="_blank"><i class="fa-brands fa-instagram"></i> muxammadin17</a><br><br>
+  <a href="https://github.com/muxammadin7" target="_blank"><i class="fa-brands fa-github"></i> github.com/muxammadin7</a>
+</div>
+
 </section>
 
 <footer>© 2026 Muxammadin7</footer>
@@ -156,7 +174,7 @@ const translations = {
     heroText:"HTML, CSS, JavaScript, Node.js va Kali Linux bilan ishlayman",
 
     aboutTitle:"Men haqimda",
-    aboutText:"Men Muxammadin — IT va Cybersecurity yo‘nalishida o‘rganuvchi dasturchiman.",
+    aboutText:"Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi hamda o‘z loyihalarini yurituvchiman.",
     uni:"University of Business and Science",
 
     skillsTitle:"Ko‘nikmalar",
@@ -180,7 +198,7 @@ const translations = {
     heroText:"Работаю с HTML, CSS, JavaScript, Node.js и Kali Linux",
 
     aboutTitle:"Обо мне",
-    aboutText:"Я Мухаммадин — разработчик, изучающий IT и кибербезопасность.",
+    aboutText:"Я Мухаммадин Идрисалиев — изучаю IT и кибербезопасность и веду собственные проекты.",
     uni:"University of Business and Science",
 
     skillsTitle:"Навыки",
@@ -204,7 +222,7 @@ const translations = {
     heroText:"Working with HTML, CSS, JavaScript, Node.js and Kali Linux",
 
     aboutTitle:"About Me",
-    aboutText:"I am Muxammadin — a developer studying IT and Cybersecurity.",
+    aboutText:"I am Muxammadin Idrisaliyev — studying IT & Cybersecurity and managing my own projects.",
     uni:"University of Business and Science",
 
     skillsTitle:"Skills",
