--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@ nav a{
   margin-left:20px;
   text-decoration:none;
 }
-.lang{
-  margin-left:30px;
-}
 .lang button{
   background:#38bdf8;
   border:none;
@@ -61,7 +58,6 @@ h3{color:#38bdf8;font-size:32px;}
 .fill{
   height:12px;
   background:#38bdf8;
-  border-radius:20px;
 }
 
 .card{
@@ -73,8 +69,9 @@ h3{color:#38bdf8;font-size:32px;}
 
 .contact-icons a{
   color:#38bdf8;
-  font-size:22px;
-  margin-right:15px;
+  font-size:20px;
+  display:block;
+  margin-top:10px;
   text-decoration:none;
 }
 
@@ -107,7 +104,7 @@ footer{text-align:center;padding:20px;opacity:.7;}
 </section>
 
 <section id="about">
-<h3 data-lang="aboutTitle">About Me</h3>
+<h3 data-lang="aboutTitle">Men haqimda</h3>
 
 <p data-lang="aboutText">
 Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi hamda o‘z loyihalarini yurituvchiman.
@@ -116,45 +113,42 @@ Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi 
 <div class="card">
 📍 Namangan viloyati, To‘raqo‘rg‘on tumani <br><br>
 <b data-lang="uni">University of Business and Science</b><br>
-Axborot tizimlari va texnologiyalari (2025 - 2026)
+<span data-lang="edu">Axborot tizimlari va texnologiyalari (2025 - 2026)</span>
 </div>
 </section>
 
 <section id="skills">
 <h3 data-lang="skillsTitle">Skills</h3>
 
-<div class="skill">HTML — 75%
-  <div class="bar"><div class="fill" style="width:75%"></div></div>
-</div>
+HTML — 75%
+<div class="bar"><div class="fill" style="width:75%"></div></div>
 
-<div class="skill">CSS — 50%
-  <div class="bar"><div class="fill" style="width:50%"></div></div>
-</div>
+CSS — 50%
+<div class="bar"><div class="fill" style="width:50%"></div></div>
 
-<div class="skill">JavaScript & Node.js — 45%
-  <div class="bar"><div class="fill" style="width:45%"></div></div>
-</div>
+JavaScript & Node.js — 45%
+<div class="bar"><div class="fill" style="width:45%"></div></div>
 
-<div class="skill">Kali Linux & Cybersecurity — 50%
-  <div class="bar"><div class="fill" style="width:50%"></div></div>
-</div>
+Kali Linux & Cybersecurity — 50%
+<div class="bar"><div class="fill" style="width:50%"></div></div>
+
 </section>
 
 <section id="projects">
 <h3 data-lang="projectsTitle">Projects</h3>
-<div class="card" data-lang="proj1">Personal Portfolio Website</div>
-<div class="card" data-lang="proj2">Landing Page Projects</div>
-<div class="card" data-lang="proj3">Cybersecurity Practice Labs</div>
+<div class="card">Personal Portfolio Website</div>
+<div class="card">Landing Page Projects</div>
+<div class="card">Cybersecurity Practice Labs</div>
 </section>
 
 <section id="contact">
 <h3 data-lang="contactTitle">Contact</h3>
 
 <div class="contact-icons">
-  <a href="tel:+998935457307"><i class="fa-solid fa-phone"></i> +998935457307</a><br><br>
-  <a href="https://t.me/Muxammadin1" target="_blank"><i class="fa-brands fa-telegram"></i> @Muxammadin1</a><br><br>
-  <a href="https://instagram.com/muxammadin17" target="_blank"><i class="fa-brands fa-instagram"></i> muxammadin17</a><br><br>
-  <a href="https://github.com/muxammadin7" target="_blank"><i class="fa-brands fa-github"></i> github.com/muxammadin7</a>
+<a href="tel:+998935457307"><i class="fa-solid fa-phone"></i> +998935457307</a>
+<a href="https://t.me/Muxammadin1" target="_blank"><i class="fa-brands fa-telegram"></i> @Muxammadin1</a>
+<a href="https://instagram.com/muxammadin17" target="_blank"><i class="fa-brands fa-instagram"></i> muxammadin17</a>
+<a href="https://github.com/muxammadin7" target="_blank"><i class="fa-brands fa-github"></i> github.com/muxammadin7</a>
 </div>
 
 </section>
@@ -169,69 +163,46 @@ const translations = {
     skills:"Ko‘nikmalar",
     projects:"Loyihalar",
     contact:"Aloqa",
-
     heroTitle:"IT Mutaxassis & <span>Cybersecurity Enthusiast</span>",
     heroText:"HTML, CSS, JavaScript, Node.js va Kali Linux bilan ishlayman",
-
     aboutTitle:"Men haqimda",
     aboutText:"Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi hamda o‘z loyihalarini yurituvchiman.",
     uni:"University of Business and Science",
-
+    edu:"Axborot tizimlari va texnologiyalari (2025 - 2026)",
     skillsTitle:"Ko‘nikmalar",
-
     projectsTitle:"Loyihalar",
-    proj1:"Shaxsiy Portfolio Sayt",
-    proj2:"Landing Page Loyihalar",
-    proj3:"Cybersecurity Amaliy Lablar",
-
     contactTitle:"Aloqa"
   },
-
   ru:{
     home:"Главная",
     about:"Обо мне",
     skills:"Навыки",
     projects:"Проекты",
     contact:"Контакты",
-
     heroTitle:"IT специалист & <span>Кибербезопасность</span>",
     heroText:"Работаю с HTML, CSS, JavaScript, Node.js и Kali Linux",
-
     aboutTitle:"Обо мне",
     aboutText:"Я Мухаммадин Идрисалиев — изучаю IT и кибербезопасность и веду собственные проекты.",
     uni:"University of Business and Science",
-
+    edu:"Информационные системы и технологии (2025 - 2026)",
     skillsTitle:"Навыки",
-
     projectsTitle:"Проекты",
-    proj1:"Персональный сайт портфолио",
-    proj2:"Landing Page проекты",
-    proj3:"Практика по кибербезопасности",
-
     contactTitle:"Контакты"
   },
-
   en:{
     home:"Home",
     about:"About",
     skills:"Skills",
     projects:"Projects",
     contact:"Contact",
-
     heroTitle:"IT Specialist & <span>Cybersecurity Enthusiast</span>",
     heroText:"Working with HTML, CSS, JavaScript, Node.js and Kali Linux",
-
     aboutTitle:"About Me",
     aboutText:"I am Muxammadin Idrisaliyev — studying IT & Cybersecurity and managing my own projects.",
     uni:"University of Business and Science",
-
+    edu:"Information Systems and Technologies (2025 - 2026)",
     skillsTitle:"Skills",
-
     projectsTitle:"Projects",
-    proj1:"Personal Portfolio Website",
-    proj2:"Landing Page Projects",
-    proj3:"Cybersecurity Practice Labs",
-
     contactTitle:"Contact"
   }
 };
@@ -242,6 +213,9 @@ function setLang(lang){
     el.innerHTML = translations[lang][key];
   });
 }
+
+// Default til — O‘zbek
+setLang('uz');
 </script>
 
 </body>
