--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ footer{text-align:center;padding:20px;opacity:.7;}
 <h3 data-lang="aboutTitle">Men haqimda</h3>
 
 <p data-lang="aboutText">
-Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi hamda o‘z loyihalarini yurituvchiman.
+Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi va kichik loyihalarini quruvchiman
 </p>
 
 <div class="card">
