--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Muxammadin | Portfolio</title>
+<title>Muxammadin Idrisaliyev | Portfolio</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
@@ -20,6 +20,10 @@ header{
   display:flex;
   justify-content:space-between;
   align-items:center;
+}
+header h1{
+  margin:0;
+  font-size:24px;
 }
 nav a{
   color:white;
@@ -49,7 +53,7 @@ nav a{
 section{padding:60px;}
 h3{color:#38bdf8;font-size:32px;}
 
-.skill{margin-top:20px;}
+.skill{margin-top:15px;}
 .bar{
   background:rgba(255,255,255,0.2);
   border-radius:20px;
@@ -69,7 +73,7 @@ h3{color:#38bdf8;font-size:32px;}
 
 .contact-icons a{
   color:#38bdf8;
-  font-size:20px;
+  font-size:18px;
   display:block;
   margin-top:10px;
   text-decoration:none;
@@ -81,7 +85,7 @@ footer{text-align:center;padding:20px;opacity:.7;}
 <body>
 
 <header>
-<h1>Muxammadin.</h1>
+<h1>Muxammadin Idrisaliyev</h1>
 
 <nav>
 <a href="#home" data-lang="home">Home</a>
@@ -107,7 +111,7 @@ footer{text-align:center;padding:20px;opacity:.7;}
 <h3 data-lang="aboutTitle">Men haqimda</h3>
 
 <p data-lang="aboutText">
-Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi va kichik loyihalarini quruvchiman
+Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi va kichik loyihalarini quruvchiman.
 </p>
 
 <div class="card">
@@ -120,18 +124,21 @@ Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi 
 <section id="skills">
 <h3 data-lang="skillsTitle">Skills</h3>
 
-HTML — 75%
-<div class="bar"><div class="fill" style="width:75%"></div></div>
+<div class="skill">HTML
+  <div class="bar"><div class="fill" style="width:75%"></div></div>
+</div>
 
-CSS — 50%
-<div class="bar"><div class="fill" style="width:50%"></div></div>
+<div class="skill">CSS
+  <div class="bar"><div class="fill" style="width:50%"></div></div>
+</div>
 
-JavaScript & Node.js — 45%
-<div class="bar"><div class="fill" style="width:45%"></div></div>
+<div class="skill">JavaScript & Node.js
+  <div class="bar"><div class="fill" style="width:45%"></div></div>
+</div>
 
-Kali Linux & Cybersecurity — 50%
-<div class="bar"><div class="fill" style="width:50%"></div></div>
-
+<div class="skill">Kali Linux & Cybersecurity
+  <div class="bar"><div class="fill" style="width:50%"></div></div>
+</div>
 </section>
 
 <section id="projects">
@@ -146,14 +153,27 @@ Kali Linux & Cybersecurity — 50%
 
 <div class="contact-icons">
 <a href="tel:+998935457307"><i class="fa-solid fa-phone"></i> +998935457307</a>
-<a href="https://t.me/Muxammadin1" target="_blank"><i class="fa-brands fa-telegram"></i> @Muxammadin1</a>
-<a href="https://instagram.com/muxammadin17" target="_blank"><i class="fa-brands fa-instagram"></i> muxammadin17</a>
-<a href="https://github.com/muxammadin7" target="_blank"><i class="fa-brands fa-github"></i> github.com/muxammadin7</a>
+
+<a href="mailto:midrisaliyev@gmail.com">
+<i class="fa-solid fa-envelope"></i> midrisaliyev@gmail.com
+</a>
+
+<a href="https://t.me/Muxammadin1" target="_blank">
+<i class="fa-brands fa-telegram"></i> @Muxammadin1
+</a>
+
+<a href="https://instagram.com/muxammadin17" target="_blank">
+<i class="fa-brands fa-instagram"></i> muxammadin17
+</a>
+
+<a href="https://github.com/muxammadin7" target="_blank">
+<i class="fa-brands fa-github"></i> github.com/muxammadin7
+</a>
 </div>
 
 </section>
 
-<footer>© 2026 Muxammadin7</footer>
+<footer>© 2026 Muxammadin Idrisaliyev</footer>
 
 <script>
 const translations = {
@@ -163,44 +183,55 @@ const translations = {
     skills:"Ko‘nikmalar",
     projects:"Loyihalar",
     contact:"Aloqa",
+
     heroTitle:"IT Mutaxassis & <span>Cybersecurity Enthusiast</span>",
     heroText:"HTML, CSS, JavaScript, Node.js va Kali Linux bilan ishlayman",
+
     aboutTitle:"Men haqimda",
-    aboutText:"Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi hamda o‘z loyihalarini yurituvchiman.",
+    aboutText:"Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi va kichik loyihalarini quruvchiman.",
     uni:"University of Business and Science",
     edu:"Axborot tizimlari va texnologiyalari (2025 - 2026)",
+
     skillsTitle:"Ko‘nikmalar",
     projectsTitle:"Loyihalar",
     contactTitle:"Aloqa"
   },
+
   ru:{
     home:"Главная",
     about:"Обо мне",
     skills:"Навыки",
     projects:"Проекты",
     contact:"Контакты",
+
     heroTitle:"IT специалист & <span>Кибербезопасность</span>",
     heroText:"Работаю с HTML, CSS, JavaScript, Node.js и Kali Linux",
+
     aboutTitle:"Обо мне",
-    aboutText:"Я Мухаммадин Идрисалиев — изучаю IT и кибербезопасность и веду собственные проекты.",
+    aboutText:"Я Мухаммадин Идрисалиев — изучаю IT и кибербезопасность и создаю собственные проекты.",
     uni:"University of Business and Science",
     edu:"Информационные системы и технологии (2025 - 2026)",
+
     skillsTitle:"Навыки",
     projectsTitle:"Проекты",
     contactTitle:"Контакты"
   },
+
   en:{
     home:"Home",
     about:"About",
     skills:"Skills",
     projects:"Projects",
     contact:"Contact",
+
     heroTitle:"IT Specialist & <span>Cybersecurity Enthusiast</span>",
     heroText:"Working with HTML, CSS, JavaScript, Node.js and Kali Linux",
+
     aboutTitle:"About Me",
-    aboutText:"I am Muxammadin Idrisaliyev — studying IT & Cybersecurity and managing my own projects.",
+    aboutText:"I am Muxammadin Idrisaliyev — studying IT & Cybersecurity and building my own projects.",
     uni:"University of Business and Science",
     edu:"Information Systems and Technologies (2025 - 2026)",
+
     skillsTitle:"Skills",
     projectsTitle:"Projects",
     contactTitle:"Contact"
@@ -214,7 +245,6 @@ function setLang(lang){
   });
 }
 
-// Default til — O‘zbek
 setLang('uz');
 </script>
 
