--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ const translations = {
     heroText:"HTML, CSS, JavaScript, Node.js va Kali Linux bilan ishlayman",
 
     aboutTitle:"Men haqimda",
-    aboutText:"Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi va kichik loyihalarini quruvchiman.",
+    aboutText:"Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘quvchi va yangi loihalar yaratuvchiman.",
     uni:"University of Business and Science",
     edu:"Axborot tizimlari va texnologiyalari (2025 - 2026)",
 
