--- a/index.html
+++ b/index.html
@@ -9,27 +9,42 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
 <style>
+*{
+  box-sizing:border-box;
+}
+
 body{
   margin:0;
   font-family:'Poppins',sans-serif;
   background:linear-gradient(135deg,#020024,#090979,#00d4ff);
   color:white;
 }
+
+/* ===== HEADER ===== */
 header{
   padding:20px 60px;
   display:flex;
   justify-content:space-between;
   align-items:center;
+  flex-wrap:wrap;
 }
 header h1{
   margin:0;
   font-size:24px;
 }
+
+nav{
+  display:flex;
+  align-items:center;
+  flex-wrap:wrap;
+}
 nav a{
   color:white;
   margin-left:20px;
   text-decoration:none;
+  font-size:15px;
 }
+
 .lang button{
   background:#38bdf8;
   border:none;
@@ -39,31 +54,47 @@ nav a{
   cursor:pointer;
 }
 
+/* ===== HERO ===== */
 .hero{
-  height:90vh;
+  min-height:90vh;
   display:flex;
   flex-direction:column;
   justify-content:center;
   align-items:center;
   text-align:center;
+  padding:20px;
 }
-.hero h2{font-size:45px;margin:0;}
+.hero h2{
+  font-size:45px;
+  margin:0;
+}
 .hero span{color:#38bdf8;}
 
-section{padding:60px;}
-h3{color:#38bdf8;font-size:32px;}
+/* ===== SECTIONS ===== */
+section{
+  padding:60px;
+}
+h3{
+  color:#38bdf8;
+  font-size:32px;
+}
 
-.skill{margin-top:15px;}
+/* ===== SKILLS ===== */
+.skill{
+  margin-top:15px;
+}
 .bar{
   background:rgba(255,255,255,0.2);
   border-radius:20px;
   overflow:hidden;
+  margin-top:5px;
 }
 .fill{
   height:12px;
   background:#38bdf8;
 }
 
+/* ===== CARDS ===== */
 .card{
   background:rgba(255,255,255,0.08);
   padding:15px;
@@ -71,6 +102,7 @@ h3{color:#38bdf8;font-size:32px;}
   border-radius:15px;
 }
 
+/* ===== CONTACT ===== */
 .contact-icons a{
   color:#38bdf8;
   font-size:18px;
@@ -79,7 +111,67 @@ h3{color:#38bdf8;font-size:32px;}
   text-decoration:none;
 }
 
-footer{text-align:center;padding:20px;opacity:.7;}
+/* ===== FOOTER ===== */
+footer{
+  text-align:center;
+  padding:20px;
+  opacity:.7;
+}
+
+/* =========================
+   📱 MOBILE RESPONSIVE
+   ========================= */
+@media (max-width: 768px){
+
+  header{
+    padding:15px 20px;
+    flex-direction:column;
+    align-items:flex-start;
+  }
+
+  nav{
+    margin-top:10px;
+    flex-direction:column;
+    align-items:flex-start;
+  }
+
+  nav a{
+    margin:8px 0;
+  }
+
+  .lang{
+    margin-top:10px;
+  }
+
+  .hero h2{
+    font-size:30px;
+  }
+
+  section{
+    padding:40px 20px;
+  }
+
+  h3{
+    font-size:26px;
+  }
+
+  .contact-icons a{
+    font-size:16px;
+  }
+}
+
+/* =========================
+   📱 SMALL PHONES
+   ========================= */
+@media (max-width: 480px){
+  .hero h2{
+    font-size:26px;
+  }
+
+  header h1{
+    font-size:20px;
+  }
+}
 </style>
 </head>
 <body>
@@ -109,7 +201,6 @@ footer{text-align:center;padding:20px;opacity:.7;}
 
 <section id="about">
 <h3 data-lang="aboutTitle">Men haqimda</h3>
-
 <p data-lang="aboutText">
 Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi va kichik loyihalarini quruvchiman.
 </p>
@@ -153,24 +244,11 @@ Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi 
 
 <div class="contact-icons">
 <a href="tel:+998935457307"><i class="fa-solid fa-phone"></i> +998935457307</a>
-
-<a href="mailto:midrisaliyev@gmail.com">
-<i class="fa-solid fa-envelope"></i> midrisaliyev@gmail.com
-</a>
-
-<a href="https://t.me/Muxammadin1" target="_blank">
-<i class="fa-brands fa-telegram"></i> @Muxammadin1
-</a>
-
-<a href="https://instagram.com/muxammadin17" target="_blank">
-<i class="fa-brands fa-instagram"></i> muxammadin17
-</a>
-
-<a href="https://github.com/muxammadin7" target="_blank">
-<i class="fa-brands fa-github"></i> github.com/muxammadin7
-</a>
+<a href="mailto:midrisaliyev@gmail.com"><i class="fa-solid fa-envelope"></i> midrisaliyev@gmail.com</a>
+<a href="https://t.me/Muxammadin1" target="_blank"><i class="fa-brands fa-telegram"></i> @Muxammadin1</a>
+<a href="https://instagram.com/muxammadin17" target="_blank"><i class="fa-brands fa-instagram"></i> muxammadin17</a>
+<a href="https://github.com/muxammadin7" target="_blank"><i class="fa-brands fa-github"></i> github.com/muxammadin7</a>
 </div>
-
 </section>
 
 <footer>© 2026 Muxammadin Idrisaliyev</footer>
@@ -183,55 +261,44 @@ const translations = {
     skills:"Ko‘nikmalar",
     projects:"Loyihalar",
     contact:"Aloqa",
-
     heroTitle:"IT Mutaxassis & <span>Cybersecurity Enthusiast</span>",
     heroText:"HTML, CSS, JavaScript, Node.js va Kali Linux bilan ishlayman",
-
     aboutTitle:"Men haqimda",
-    aboutText:"Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘quvchi va yangi loihalar yaratuvchiman.",
+    aboutText:"Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi va kichik loyihalarini quruvchiman.",
     uni:"University of Business and Science",
     edu:"Axborot tizimlari va texnologiyalari (2025 - 2026)",
-
     skillsTitle:"Ko‘nikmalar",
     projectsTitle:"Loyihalar",
     contactTitle:"Aloqa"
   },
-
   ru:{
     home:"Главная",
     about:"Обо мне",
     skills:"Навыки",
     projects:"Проекты",
     contact:"Контакты",
-
     heroTitle:"IT специалист & <span>Кибербезопасность</span>",
     heroText:"Работаю с HTML, CSS, JavaScript, Node.js и Kali Linux",
-
     aboutTitle:"Обо мне",
     aboutText:"Я Мухаммадин Идрисалиев — изучаю IT и кибербезопасность и создаю собственные проекты.",
     uni:"University of Business and Science",
     edu:"Информационные системы и технологии (2025 - 2026)",
-
     skillsTitle:"Навыки",
     projectsTitle:"Проекты",
     contactTitle:"Контакты"
   },
-
   en:{
     home:"Home",
     about:"About",
     skills:"Skills",
     projects:"Projects",
     contact:"Contact",
-
     heroTitle:"IT Specialist & <span>Cybersecurity Enthusiast</span>",
     heroText:"Working with HTML, CSS, JavaScript, Node.js and Kali Linux",
-
     aboutTitle:"About Me",
     aboutText:"I am Muxammadin Idrisaliyev — studying IT & Cybersecurity and building my own projects.",
     uni:"University of Business and Science",
     edu:"Information Systems and Technologies (2025 - 2026)",
-
     skillsTitle:"Skills",
     projectsTitle:"Projects",
     contactTitle:"Contact"
@@ -244,7 +311,6 @@ function setLang(lang){
     el.innerHTML = translations[lang][key];
   });
 }
-
 setLang('uz');
 </script>
 
