--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ footer{
 <section id="about">
 <h3 data-lang="aboutTitle">Men haqimda</h3>
 <p data-lang="aboutText">
-Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi va kichik loyihalarini quruvchiman.
+Men Idrisaliyev Muxammadin — IT va Cybersecurity yo‘nalishida o‘rganuvchi va kichik loyihalarini quruvchiman.
 </p>
 
 <div class="card">
@@ -245,7 +245,6 @@ Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi 
 <div class="contact-icons">
 <a href="tel:+998935457307"><i class="fa-solid fa-phone"></i> +998935457307</a>
 <a href="mailto:midrisaliyev@gmail.com"><i class="fa-solid fa-envelope"></i> midrisaliyev@gmail.com</a>
-<a href="https://t.me/Muxammadin1" target="_blank"><i class="fa-brands fa-telegram"></i> @Muxammadin1</a>
 <a href="https://instagram.com/muxammadin17" target="_blank"><i class="fa-brands fa-instagram"></i> muxammadin17</a>
 <a href="https://github.com/muxammadin7" target="_blank"><i class="fa-brands fa-github"></i> github.com/muxammadin7</a>
 </div>
@@ -264,7 +263,7 @@ const translations = {
     heroTitle:"IT Mutaxassis & <span>Cybersecurity Enthusiast</span>",
     heroText:"HTML, CSS, JavaScript, Node.js va Kali Linux bilan ishlayman",
     aboutTitle:"Men haqimda",
-    aboutText:"Men Muxammadin Idrisaliyev — IT va Cybersecurity yo‘nalishida o‘rganuvchi va kichik loyihalarini quruvchiman.",
+    aboutText:"Men Idrisaliyev Muxammadin — IT va Cybersecurity yo‘nalishida o‘rganuvchi va kichik loyihalarini quruvchiman.",
     uni:"University of Business and Science",
     edu:"Axborot tizimlari va texnologiyalari (2025 - 2026)",
     skillsTitle:"Ko‘nikmalar",
